# can_qwen_go_fast_in_graph_rl

./: .gitignore  DESIGN.md  docker-compose.yml  pyproject.toml
demo/: index.html  server.py
eval/: ABLATION.md  __init__.py  agent_baseline.py  claude_baseline.py  frames.py  metrics.py  run_eval.py
eval/results/: README.md  registry.jsonl
eval/tests/: test_agent_baseline.py  test_claude_baseline.py  test_frames.py  test_metrics.py  test_run_eval.py
ingest/: README.md  bench_llamacpp.py  build_sidecar.py  download.py  embed_qdrant.py  load_neo4j.py
ingest/tests/: test_build_sidecar.py
presentation/: make_figures.py  slides.md
questiongen/: __init__.py  generate.py  kg_patterns.py  schema.py  sidecar.py  sim_link.py  verbalize.py
questiongen/tests/: test_generate.py  test_kg_patterns.py  test_schema.py  test_sim_link.py  test_verbalize.py
scripts/: status.py  up.sh
src/ecs/: answer.py  config.py  embedder.py
toolserver/: README.md  app.py  schema.py
toolserver/tests/: test_endpoints.py
training/: ALTERNATIVES.md  README.md  __init__.py  baseline_eval.py  data.py  requirements.txt  rollout_smoke.py  throughput_bench.py
training/configs/: limited_4b_2xh200.yaml  main_4b.yaml  reward.yaml  tools_ecs.yaml  validate_0p6b.yaml  validate_0p8b.yaml  validate_1p7b.yaml  validate_2b_qwen35.yaml
training/env/: __init__.py  reward.py  tools.py
training/launch/: common.sh  loadtest_toolserver.py  make_data_tarball.sh  run_main.sh  run_validate.sh  setup_q35_venv.sh  setup_remote.sh  setup_runpod.sh  setup_vast.sh
training/tests/: conftest.py  (+4 more)
(+1 files in other folders)
