[project]
name = "ecs"
version = "0.1.0"
description = "SID-1-style agentic entity retrieval over Wikidata5M (neo4j + qdrant + harrier)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "sentence-transformers>=3.3",
    "torch>=2.5",
    "datasets>=3.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "orjson>=3.10",
    "tqdm>=4.66",
    "openai>=1.55",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=17",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
